[package]
name = "greeting_server"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
env_logger = "0.9"
greeting_client = { path = "../greeting_client" }
log = "0.4"
paste = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
warp_rpc = { git = "https://github.com/kouky/warp_rpc" }
